# hdphoto

./: CMakeLists.txt  Makefile  hdphoto.vcproj  hdphoto_vc10.vcxproj  hdphoto_vc10.vcxproj.filters  usexp-hdphoto-config.cmake
common/include/: guiddef.h  wmsal.h  wmspecstring.h
doc/: HDPhoto_eula.txt  readme.txt
image/decode/: segdec.c  strdec.c
image/sys/: perfTimer.h  perfTimerWin32.c  strTransform.h  strcodec.c
image/vc8projects/: CommonLib.vcproj  DecodeLib.vcproj  EncodeLib.vcproj  MemtraceLib.vcproj
sample/: Shortcut to WMP.sln.lnk
systems/tools/samplecodenew/wmpencdecoder/: WmpDecApp.c  WmpEncApp.c
systems/tools/vc8projects/: WMP.sln  WMPDecApp.vcproj  WMPEncApp.vcproj  WMPGlueLib.vcproj  WMPMetaLib.vcproj
systems/tools/wmpgluelib/: WMPGlue.c  WMPGlue.h  WMPGlueBmp.c  WMPGlueHdr.c  WMPGluePFC.c  WMPGluePnm.c  WMPGlueTif.c  WMPGlueWmp.c  WMPGlueYUV.c
systems/tools/wmpmetalib/: WMPMeta.h
xplat/: Makefile
